--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -29,10 +29,8 @@ jobs:
       - 
         name: Build the image
         run: |
-            docker buildx build --build-arg CARDANO_VERSION="$CARDANO_VERSION" --build-arg CABAL_VERSION="$CABAL_VERSION" --build-arg GHC_VERSION="$GHC_VERSION" --build-arg JOBS="$JOBS" --push --tag $DOCKER_TAG:$CARDANO_VERSION --platform linux/arm64/v8,linux/amd64 .
+            docker buildx build --build-arg CABAL_VERSION="$CABAL_VERSION" --build-arg JOBS="$JOBS" --push --tag $DOCKER_TAG:$CABAL_VERSION --platform linux/arm64/v8,linux/amd64 .
         env:
           DOCKER_TAG: juampe/base-cabal
           CABAL_VERSION: 3.2.0.0
-          GHC_VERSION: 8.10.2
-          CARDANO_VERSION: 1.25.1
           JOBS: -j2
